2024-01-13  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug with filter dialog buttons (Bug 479771).

2024-01-09  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug with opening help from the config dialog (Bug 479591).

2024-01-01  Robby Stephenson  <robby@periapsis.org>

	* Released Tellico 3.5.3.
	* Updated author search for Open Library.
	* Improved entry matching heuristics.

2023-12-19  Robby Stephenson  <robby@periapsis.org>

	* Updated Kino-Teatr data source.

2023-11-19  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug with showing empty space on left for custom collections with no image

2023-10-22  Robby Stephenson  <robby@periapsis.org>

	* Released Tellico 3.5.2.

2023-09-28  Robby Stephenson  <robby@periapsis.org>

	* Added importer for Discogs collections (Bug 446262).

2023-09-27  Robby Stephenson  <robby@periapsis.org>

	* Added fallback title for entries with no title field (Bug 231867).

2023-09-25  Robby Stephenson  <robby@periapsis.org>

	* Added VGCollect data source.

2023-09-22  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug with writing some relative url links (Bug 472778).

2023-09-19  Robby Stephenson  <robby@periapsis.org>

	* Updated Numista data source to fetch more than 20 results.

2023-07-16  Robby Stephenson  <robby@periapsis.org>

	* Removed author searches from Google Scholar.

2023-07-05  Robby Stephenson  <robby@periapsis.org>

	* Added SAO/ADS as data source.

2023-07-03  Robby Stephenson  <robby@periapsis.org>

	* Released Tellico 3.5.1.

2023-06-14  Robby Stephenson  <robby@periapsis.org>

	* Added capability to remember entry template for custom collections based on file name.

2023-06-13  Robby Stephenson  <robby@periapsis.org>

	* Added OPDS catalogs as a data source.

2023-05-29  Robby Stephenson  <robby@periapsis.org>

	* Added support for reading images from data URLs.

2023-05-12  Robby Stephenson  <robby@periapsis.org>

	* Released Tellico 3.5.

2023-05-07  Robby Stephenson  <robby@periapsis.org>